@@ -3,6 +3,7 @@ package com.mito.sectask.seeder.impl;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 import com.mito.sectask.entities.ProjectEntity;
 import com.mito.sectask.entities.QProjectEntity;
@@ -109,7 +110,7 @@ public class UserProjectRoleSeeder implements Seeder {
                     .setRole(collaboratorRole)
                     .setIsPending(false)
             )
-            .toList();
+            .collect(Collectors.toList());
 
         authorities.add(
             new UserProjectRoleEntity()
